[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "pyupway"
version = "0.0.16"
authors = [
  { name="Jussi Rosenberg", email="jussi.rosenberg@iki.fi" },
]
description = "Read values from MyUpway cloud service"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["MyUpway", "Jäspi", "Nibe", "Heat pump"]
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/lemanjo/pyupway"
"Changelog" = "https://github.com/lemanjo/pyupway/blob/master/changelog.md"
